--- a/index.html
+++ b/index.html
@@ -116,8 +116,14 @@ a better update client for UNIX by using modern C coding practices.
     <th>MD5 checksum</th>
   </tr>
   <tr>
+    <td><a href="https://github.com/uhlin/enhanced-duc/archive/v2.0.tar.gz">v2.0</a></td>
+    <td><span class="new">NEW!</span></td>
+    <td>2018-03-12</td>
+    <td><kbd>2147076dd05863cddb66042c8188b151</kbd></td>
+  </tr>
+  <tr>
     <td><a href="https://github.com/uhlin/enhanced-duc/archive/v1.6.tar.gz">v1.6</a></td>
-    <td><!--<span class="new">NEW!</span>--></td>
+    <td>&nbsp;</td>
     <td>2016-04-04</td>
     <td><kbd>9c064d0f6040d1110394c158f87ace29</kbd></td>
   </tr>
