--- a/index.html
+++ b/index.html
@@ -116,8 +116,14 @@ a better update client for UNIX by using modern C coding practices.
     <th>MD5 checksum</th>
   </tr>
   <tr>
-    <td><a href="https://github.com/uhlin/enhanced-duc/archive/v2.0.tar.gz">v2.0</a></td>
+    <td><a href="https://github.com/uhlin/enhanced-duc/archive/v2.0.1.tar.gz">v2.0.1</a></td>
     <td><span class="new">NEW!</span></td>
+    <td>2018-04-14</td>
+    <td><kbd>fdfd0ca0d2eaeda6896cf6ff7c99e6a4</kbd></td>
+  </tr>
+  <tr>
+    <td><a href="https://github.com/uhlin/enhanced-duc/archive/v2.0.tar.gz">v2.0</a></td>
+    <td>&nbsp;</td>
     <td>2018-03-12</td>
     <td><kbd>2147076dd05863cddb66042c8188b151</kbd></td>
   </tr>
