--- a/index.html
+++ b/index.html
@@ -84,14 +84,15 @@ a better update client for UNIX by using modern C coding practices.
 </div> <!--mid-->
 
 <div id="bottom">
-  <table id="bottom_contents">
-    <tr>
-      <td><p>
-Copyright &copy; 2015-2019 <a href="mailto:markus.uhlin@bredband.net">Markus Uhlin</a><br>
-All rights reserved.
-      </p></td>
-    </tr>
-  </table>
+	<table id="bottom_contents">
+	<tr>
+		<td>
+		<p>Copyright &copy; 2015-2021
+		<a href="mailto:markus.uhlin@bredband.net">Markus Uhlin</a><br>
+		All rights reserved.</p>
+		</td>
+	</tr>
+</table>
 </div>
 </body>
 
