--- a/index.html
+++ b/index.html
@@ -34,53 +34,67 @@
 </div>
 
 <div id="mid">
-<h2>About</h2>
-<p>
-Enhanced DUC is a dynamic DNS update client and daemon. Primarily it's
-written for use with the DNS services that
-<a href="http://www.noip.com">NoIP</a>
-provide. However: the protocol
-<cite>is in an open format used by other service providers</cite>.
-I began working on the project in November 2015. The goal is to create
-a better update client for UNIX by using modern C coding practices.
-</p>
-<h2>Program releases</h2>
-<table id="rel">
-  <tr>
-    <th>Version</th>
-    <th>&nbsp;</th>
-    <th>Date</th>
-    <th>MD5 checksum</th>
-  </tr>
-  <tr>
-    <td><a href="https://github.com/uhlin/enhanced-duc/archive/v2.1.tar.gz">v2.1</a></td>
-    <td><span class="new">NEW!</span></td>
-    <td>2019-06-16</td>
-    <td><kbd>a021abe3e2153397d68d9a7a0548ea60</kbd></td>
-  </tr>
-  <tr>
-    <td><a href="https://github.com/uhlin/enhanced-duc/archive/v2.0.1.tar.gz">v2.0.1</a></td>
-    <td>&nbsp;</td>
-    <td>2018-04-14</td>
-    <td><kbd>fdfd0ca0d2eaeda6896cf6ff7c99e6a4</kbd></td>
-  </tr>
-  <tr>
-    <td><a href="https://github.com/uhlin/enhanced-duc/archive/v2.0.tar.gz">v2.0</a></td>
-    <td>&nbsp;</td>
-    <td>2018-03-12</td>
-    <td><kbd>2147076dd05863cddb66042c8188b151</kbd></td>
-  </tr>
-  <tr>
-    <td><a href="https://github.com/uhlin/enhanced-duc/archive/v1.6.tar.gz">v1.6</a></td>
-    <td>&nbsp;</td>
-    <td>2016-04-04</td>
-    <td><kbd>9c064d0f6040d1110394c158f87ace29</kbd></td>
-  </tr>
-</table> <!--rel-->
-<h2>GitHub project</h2>
-<p><a href="https://github.com/uhlin/enhanced-duc">The program has a project page on GitHub</a></p>
-<h2>Documentation</h2>
-<p><a href="https://github.com/uhlin/enhanced-duc/blob/master/README.md">Documentation</a></p>
+	<h2>About</h2>
+
+	<p>
+	Enhanced DUC is a dynamic DNS update client and
+	daemon. Primarily it's written for use with the DNS services
+	that
+	<a href="http://www.noip.com">NoIP</a>
+	provide.
+	However: the protocol
+	<cite>is in an open format used by other service providers</cite>.
+	I began working on the project in November 2015. The goal is
+	to create a better update client for UNIX by using modern C
+	coding practices.
+	</p>
+
+	<h2>Program releases</h2>
+
+	<table id="rel">
+	<tr>
+		<th>Version</th>
+		<th>&nbsp;</th>
+		<th>Date</th>
+		<th>MD5 checksum</th>
+	</tr>
+	<tr>
+		<td><a href="https://github.com/uhlin/enhanced-duc/archive/v2.1.tar.gz">v2.1</a></td>
+		<td>&nbsp;</td>
+		<td>2019-06-16</td>
+		<td><kbd>a021abe3e2153397d68d9a7a0548ea60</kbd></td>
+	</tr>
+	<tr>
+		<td><a href="https://github.com/uhlin/enhanced-duc/archive/v2.0.1.tar.gz">v2.0.1</a></td>
+		<td>&nbsp;</td>
+		<td>2018-04-14</td>
+		<td><kbd>fdfd0ca0d2eaeda6896cf6ff7c99e6a4</kbd></td>
+	</tr>
+	<tr>
+		<td><a href="https://github.com/uhlin/enhanced-duc/archive/v2.0.tar.gz">v2.0</a></td>
+		<td>&nbsp;</td>
+		<td>2018-03-12</td>
+		<td><kbd>2147076dd05863cddb66042c8188b151</kbd></td>
+	</tr>
+	<tr>
+		<td><a href="https://github.com/uhlin/enhanced-duc/archive/v1.6.tar.gz">v1.6</a></td>
+		<td>&nbsp;</td>
+		<td>2016-04-04</td>
+		<td><kbd>9c064d0f6040d1110394c158f87ace29</kbd></td>
+	</tr>
+	</table> <!--rel-->
+
+	<h2>GitHub project</h2>
+
+	<p>
+	<a href="https://github.com/uhlin/enhanced-duc">The program has a project page on GitHub</a>
+	</p>
+
+	<h2>Documentation</h2>
+
+	<p>
+	<a href="https://github.com/uhlin/enhanced-duc/blob/master/README.md">Documentation</a>
+	</p>
 </div> <!--mid-->
 
 <div id="bottom">
