--- a/index.html
+++ b/index.html
@@ -17,20 +17,25 @@
 
 <body>
 <div id="top">
-  <table id="top_contents">
-    <tr>
-      <td><img src="gfx/educ-globe.png" height="130" width="130" alt="EDUC logo"></td>
-      <td><h1>Enhanced DUC</h1></td>
-      <td>
-	<form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
-	  <input type="hidden" name="cmd" value="_s-xclick">
-	  <input type="hidden" name="encrypted" value="">
-	  <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donateCC_LG.gif" name="submit" alt="PayPal - The safer, easier way to pay online!">
-	  <img alt="" src="https://www.paypalobjects.com/sv_SE/i/scr/pixel.gif" width="1" height="1">
-	</form>
-      </td>
-    </tr>
-  </table>
+	<table id="top_contents">
+	<tr>
+		<td><img src="gfx/educ-globe.png" height="130" width="130" alt="EDUC logo"></td>
+		<td><h1>Enhanced DUC</h1></td>
+		<td>
+		<form action="https://www.paypal.com/cgi-bin/webscr" method="POST" target="_top">
+			<input type="hidden" id="cmd" name="cmd" value="_s-xclick">
+			<input type="hidden" id="encrypted" name="encrypted" value="">
+
+			<input type="image"
+			    src="https://www.paypalobjects.com/en_US/i/btn/btn_donateCC_LG.gif"
+			    alt="Sponsor the development!"
+			    id="submit"
+			    name="submit"
+			    onclick="setEncrypted()">
+		</form>
+		</td>
+	</tr>
+	</table>
 </div>
 
 <div id="mid">
