Added project badges

--- a/index.html
+++ b/index.html
@@ -34,6 +34,21 @@
 		</form>
 		</td>
 	</tr>
+	<tr>
+		<td>
+		<a href="https://scan.coverity.com/projects/enhanced-duc">
+		<img
+		    alt="Coverity Scan Build Status"
+		    src="https://scan.coverity.com/projects/18259/badge.svg">
+		</a>
+
+		<a href="https://lgtm.com/projects/g/uhlin/enhanced-duc/context:cpp">
+		<img
+		    alt="Language grade: C/C++"
+		    src="https://img.shields.io/lgtm/grade/cpp/g/uhlin/enhanced-duc.svg?logo=lgtm&logoWidth=18">
+		</a>
+		</td>
+	</tr>
 	</table>
 </div>
 
