--- a/index.html
+++ b/index.html
@@ -78,6 +78,12 @@
 		<th>MD5 checksum</th>
 	</tr>
 	<tr>
+		<td><a href="https://github.com/uhlin/enhanced-duc/archive/v2.2.tar.gz">v2.2</a></td>
+		<td>&nbsp;</td>
+		<td>2021-04-09</td>
+		<td><kbd>c1312ed6116a349f20602adf64c4886b</kbd></td>
+	</tr>
+	<tr>
 		<td><a href="https://github.com/uhlin/enhanced-duc/archive/v2.1.tar.gz">v2.1</a></td>
 		<td>&nbsp;</td>
 		<td>2019-06-16</td>
