Deleted the LGTM badge

--- a/index.html
+++ b/index.html
@@ -36,21 +36,12 @@
 	</tr>
 	<tr>
 		<td>
-		<a href="https://scan.coverity.com/projects/enhanced-duc">
-		<img
-		    alt="Coverity Scan Build Status"
-		    src="https://scan.coverity.com/projects/18259/badge.svg">
-		</a>
-
-		<a href="https://lgtm.com/projects/g/uhlin/enhanced-duc/context:cpp">
-		<img
-		    alt="Language grade: C/C++"
-		    src="https://img.shields.io/lgtm/grade/cpp/g/uhlin/enhanced-duc.svg?logo=lgtm&logoWidth=18">
-		</a>
+<a href="https://scan.coverity.com/projects/enhanced-duc">
+<img alt="Coverity Scan Build Status" src="https://scan.coverity.com/projects/18259/badge.svg">
+</a>
 		</td>
-
-		<td></td>
-		<td></td>
+		<td>&nbsp;</td>
+		<td>&nbsp;</td>
 	</tr>
 	</table>
 </div>
@@ -129,7 +120,7 @@
 	<table id="bottom_contents">
 	<tr>
 		<td>
-		<p>Copyright &copy; 2015-2021
+		<p>Copyright &copy; 2015-2023
 		<a href="mailto:markus.uhlin@bredband.net">Markus Uhlin</a><br>
 		All rights reserved.</p>
 		</td>
