Added new badges

--- a/index.html
+++ b/index.html
@@ -36,8 +36,19 @@
 	</tr>
 	<tr>
 		<td>
+<!-- Coverity Scan Build Status -->
 <a href="https://scan.coverity.com/projects/enhanced-duc">
 <img alt="Coverity Scan Build Status" src="https://scan.coverity.com/projects/18259/badge.svg">
+</a>
+
+<!-- CodeQL -->
+<a href="https://github.com/uhlin/enhanced-duc/actions/workflows/codeql.yml">
+<img alt="CodeQL" src="https://github.com/uhlin/enhanced-duc/actions/workflows/codeql.yml/badge.svg">
+</a>
+
+<!-- macOS -->
+<a href="https://github.com/uhlin/enhanced-duc/actions/workflows/macos.yml">
+<img alt="macOS" src="https://github.com/uhlin/enhanced-duc/actions/workflows/macos.yml/badge.svg">
 </a>
 		</td>
 		<td>&nbsp;</td>
