--- a/index.html
+++ b/index.html
@@ -40,12 +40,22 @@
 <a href="https://scan.coverity.com/projects/enhanced-duc">
 <img alt="Coverity Scan Build Status" src="https://scan.coverity.com/projects/18259/badge.svg">
 </a>
-
+		</td>
+		<td>&nbsp;</td>
+		<td>&nbsp;</td>
+	</tr>
+	<tr>
+		<td>
 <!-- CodeQL -->
 <a href="https://github.com/uhlin/enhanced-duc/actions/workflows/codeql.yml">
 <img alt="CodeQL" src="https://github.com/uhlin/enhanced-duc/actions/workflows/codeql.yml/badge.svg">
 </a>
-
+		</td>
+		<td>&nbsp;</td>
+		<td>&nbsp;</td>
+	</tr>
+	<tr>
+		<td>
 <!-- macOS -->
 <a href="https://github.com/uhlin/enhanced-duc/actions/workflows/macos.yml">
 <img alt="macOS" src="https://github.com/uhlin/enhanced-duc/actions/workflows/macos.yml/badge.svg">
