--- a/index.html
+++ b/index.html
@@ -93,34 +93,10 @@
 		<th>MD5 checksum</th>
 	</tr>
 	<tr>
-		<td><a href="https://github.com/uhlin/enhanced-duc/archive/v2.2.tar.gz">v2.2</a></td>
+		<td><a href="https://github.com/uhlin/enhanced-duc/archive/v2.3.tar.gz">v2.3</a></td>
 		<td>&nbsp;</td>
-		<td>2021-04-09</td>
-		<td><kbd>c1312ed6116a349f20602adf64c4886b</kbd></td>
-	</tr>
-	<tr>
-		<td><a href="https://github.com/uhlin/enhanced-duc/archive/v2.1.tar.gz">v2.1</a></td>
-		<td>&nbsp;</td>
-		<td>2019-06-16</td>
-		<td><kbd>a021abe3e2153397d68d9a7a0548ea60</kbd></td>
-	</tr>
-	<tr>
-		<td><a href="https://github.com/uhlin/enhanced-duc/archive/v2.0.1.tar.gz">v2.0.1</a></td>
-		<td>&nbsp;</td>
-		<td>2018-04-14</td>
-		<td><kbd>fdfd0ca0d2eaeda6896cf6ff7c99e6a4</kbd></td>
-	</tr>
-	<tr>
-		<td><a href="https://github.com/uhlin/enhanced-duc/archive/v2.0.tar.gz">v2.0</a></td>
-		<td>&nbsp;</td>
-		<td>2018-03-12</td>
-		<td><kbd>2147076dd05863cddb66042c8188b151</kbd></td>
-	</tr>
-	<tr>
-		<td><a href="https://github.com/uhlin/enhanced-duc/archive/v1.6.tar.gz">v1.6</a></td>
-		<td>&nbsp;</td>
-		<td>2016-04-04</td>
-		<td><kbd>9c064d0f6040d1110394c158f87ace29</kbd></td>
+		<td>2023-01-12</td>
+		<td><kbd></kbd></td>
 	</tr>
 	</table> <!--rel-->
 
