--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 		<td><a href="https://github.com/uhlin/enhanced-duc/archive/v2.3.tar.gz">v2.3</a></td>
 		<td>&nbsp;</td>
 		<td>2023-01-12</td>
-		<td><kbd></kbd></td>
+		<td><kbd>7ee645ba58e9b9cf5a81541bef51f7c0</kbd></td>
 	</tr>
 	</table> <!--rel-->
 
